--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<a href='https://www.albinwong.com'>Welcome to View My Blog</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Welcome View My Blog</title>
+</head>
+<body>
+	<p>Welcome View My Blog, Please wait for a moment</p>
+</body>
+<script>
+	setInterval(function(){
+		window.location.href= 'https://www.albinwong.com/';
+	  },3000);
+</script>
+</html>
